@@ -12,6 +12,7 @@ Version 1.7.13+svn:
      campaigns
    * Fixed bug 14754: Host can start game before the client has selected a
      leader (Debian bug #555964)
+   * Fix bug #15380 (cl in multiplayer local game doesn't work)
    * Fix bug #15382 (Player doesn't get transported to the next scenario)
    * Fix bug #15383 (Multiplayer Campaigns can't be loaded from savegame)
    * Fix bug #15391 (Warnings in multiplayer games)
